# CityAnalyst

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  index.html  jest.config.js  package.json  pyproject.toml  vite.config.js
CityAnalyst-GitHub/: vite.config.js
CityAnalyst-GitHub/.github/workflows/: tests.yml
CityAnalyst-GitHub/src/: AccessMap.test.js
CityAnalyst-GitHub/src/components/: RouteOverlay.jsx
CityAnalyst-GitHub/src/utils/: osmFetcher.js
docs/: api-reference.md  architecture.md  features.md  methodology.md
examples/: BasicMap.jsx
src/: AccessMap.jsx  index.js
src/components/: AccessibilityGraph.jsx  BarrierLayer.jsx  DensityLayer.jsx  IsochroneLayer.jsx  LandUseLayer.jsx  POIMarker.jsx  WheelchairLayer.jsx
src/hooks/: useAccessibilityData.js  useLogger.js  useMapBounds.js
src/utils/: analysisEngine.js  routeParser.js
